[#noissue] Replace hamcrest into assertj